# Scraper_ERCOTReports

./: ERCOT_Public_API.txt  README.md  pyproject.toml  run_main.bat  run_main_all.bat
ERCOTReports/Scripts/: defaults.py  reports.py
Scraper_ERCOTReports/: __main__.py
Scraper_ERCOTReports/ERCOTReports/: ERCOTReports.py
Scraper_ERCOTReports/ERCOTReports/Scripts/: defaults.py  downloader.py  helper_functions.py  parser.py  reports_to_download.py
