[tool.poetry]
name = "scraper_ercotreports"
version = "0.1.0"
description = "Scraping ERCOT reports"
authors = ["Christian Jensen (Laptop) <cbucjensen@gmail.com>"]
readme = "README.md"
packages = [{include = "scraper_ercotreports"}]

[[tool.poetry.source]]
name = "PyPi"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
pandas = "2.2.2"

psycopg2 = "2.9.9"

Utils = {path = "C:/Users/cbucj/Git/Utils"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
